--- a/src/app/scout/finish/finish.component.html
+++ b/src/app/scout/finish/finish.component.html
@@ -44,7 +44,7 @@
                         <ion-select-option value="3">{{driveStationColor}} 3</ion-select-option>
                     </ion-select>
                 </ion-item>
-                <ion-item *ngIf="idTeam === ''">
+                <ion-item *ngIf="idTeam === 0">
                     <ion-label position="floating">
                         Team
                     </ion-label>
