--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,7 @@
             </ion-item>
             <ion-item routerLink="scout">
               <ion-label>
-                Scout
+                Match
               </ion-label>
             </ion-item>
             <ion-item routerLink="storage">
