--- a/src/assets/sass/_ns-ionic.scss
+++ b/src/assets/sass/_ns-ionic.scss
@@ -40,3 +40,11 @@ ion-item.ns-item-medium {
 
 }
 
+.alert-wrapper.sc-ion-alert-md {
+  min-width: 400px;
+}
+
+.alert-radio-group.sc-ion-alert-md {
+  min-height: 400px;
+}
+
